Bug 1722421 [wpt PR 29796] - Fix and re-enable SameSite cookie reload WPTs, a=testonly
Automatic update from web-platform-tests
Fix and re-enable SameSite cookie reload WPTs

The SameSite cookie WPTs dealing with reloaded pages have been disabled
for a long time for failures. A recent spec change clarified the correct
behavior for SameSite cookies on reload navigations:
https://github.com/httpwg/http-extensions/pull/1384

The reloads used in these tests are renderer-initiated, as opposed to
browser-initiated (triggered by user interface elements), so they should
be considered same-site requests. The SameSite context of the initial
navigation need not be the same as the context of the reloaded
navigation. The tests are modified to support two different statuses.

One of the tests, involving POST requests, is still failing, but for a
different reason, and has been moved to the appropriate section of
TestExpectations.

Bug: 843945
Change-Id: Ifa5c4431e3761534246c150ead2e1823a712bfd2
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3053934
Reviewed-by: Steven Bingler <binglerchromium.org>
Commit-Queue: Lily Chen <chlilychromium.org>
Cr-Commit-Position: refs/heads/master{#905760}

--

wpt-commits: 48b6d27f1fc41d82b71a22daa4cf1a0698bddc02
wpt-pr: 29796

UltraBlame original commit: 85b2496e59d54a316ca222696129e91dfe0a52b3

--- a/testing/web-platform/tests/cookies/samesite/form-get-blank-reload.https.html
+++ b/testing/web-platform/tests/cookies/samesite/form-get-blank-reload.https.html
@@ -74,12 +74,123 @@ script
 <
 script
 >
+/
+/
+This
+test
+creates
+a
+form
+whose
+submission
+GETs
+the
+page
+postToParent
+.
+py
+/
+/
+(
+on
+the
+specified
+origin
+)
+in
+a
+popup
+window
+.
+The
+popup
+sends
+a
+postMessage
+/
+/
+event
+back
+to
+its
+opener
+(
+i
+.
+e
+.
+here
+)
+with
+the
+cookies
+it
+received
+which
+/
+/
+we
+verify
+against
+expectedStatus
+.
+Then
+the
+test
+sends
+a
+message
+to
+the
+/
+/
+popup
+telling
+it
+to
+reload
+itself
+via
+window
+.
+location
+.
+reload
+(
+)
+.
+Again
+/
+/
+the
+popup
+posts
+a
+message
+back
+here
+with
+the
+cookies
+it
+received
+.
+These
+/
+/
+cookies
+are
+verified
+against
+expectedStatusReload
+.
 function
 create_test
 (
 origin
 target
 expectedStatus
+expectedStatusReload
 title
 )
 {
@@ -299,6 +410,10 @@ try
 {
 verifySameSiteCookieState
 (
+reloaded
+?
+expectedStatusReload
+:
 expectedStatus
 value
 e
@@ -415,10 +530,44 @@ title
 )
 ;
 }
+/
+/
+The
+reload
+status
+is
+always
+strictly
+same
+-
+site
+because
+this
+is
+a
+site
+-
+initiated
+reload
+as
+opposed
+to
+a
+reload
+triggered
+by
+a
+user
+interface
+element
+.
 create_test
 (
 SECURE_ORIGIN
 SECURE_ORIGIN
+SameSiteStatus
+.
+STRICT
 SameSiteStatus
 .
 STRICT
@@ -447,6 +596,9 @@ SECURE_SUBDOMAIN_ORIGIN
 SameSiteStatus
 .
 STRICT
+SameSiteStatus
+.
+STRICT
 "
 Reloaded
 subdomain
@@ -470,6 +622,9 @@ SECURE_CROSS_SITE_ORIGIN
 SameSiteStatus
 .
 LAX
+SameSiteStatus
+.
+STRICT
 "
 Reloaded
 cross
@@ -481,7 +636,7 @@ level
 form
 GETs
 are
-laxly
+strictly
 same
 -
 site
