--- a/testing/web-platform/tests/cookies/samesite/form-post-blank-reload.https.html
+++ b/testing/web-platform/tests/cookies/samesite/form-post-blank-reload.https.html
@@ -74,12 +74,124 @@ script
 <
 script
 >
+/
+/
+This
+test
+creates
+a
+form
+whose
+submission
+POSTs
+to
+the
+page
+postToParent
+.
+py
+/
+/
+(
+on
+the
+specified
+origin
+)
+in
+a
+popup
+window
+.
+The
+popup
+sends
+a
+postMessage
+/
+/
+event
+back
+to
+its
+opener
+(
+i
+.
+e
+.
+here
+)
+with
+the
+cookies
+it
+received
+which
+/
+/
+we
+verify
+against
+expectedStatus
+.
+Then
+the
+test
+sends
+a
+message
+to
+the
+/
+/
+popup
+telling
+it
+to
+reload
+itself
+via
+window
+.
+location
+.
+reload
+(
+)
+.
+Again
+/
+/
+the
+popup
+posts
+a
+message
+back
+here
+with
+the
+cookies
+it
+received
+.
+These
+/
+/
+cookies
+are
+verified
+against
+expectedStatusReload
+.
 function
 create_test
 (
 origin
 target
 expectedStatus
+expectedStatusReload
 title
 )
 {
@@ -186,6 +298,10 @@ try
 {
 verifySameSiteCookieState
 (
+reloaded
+?
+expectedStatusReload
+:
 expectedStatus
 value
 e
@@ -302,10 +418,44 @@ title
 )
 ;
 }
+/
+/
+The
+reload
+status
+is
+always
+strictly
+same
+-
+site
+because
+this
+is
+a
+site
+-
+initiated
+reload
+as
+opposed
+to
+a
+reload
+triggered
+by
+a
+user
+interface
+element
+.
 create_test
 (
 SECURE_ORIGIN
 SECURE_ORIGIN
+SameSiteStatus
+.
+STRICT
 SameSiteStatus
 .
 STRICT
@@ -334,6 +484,9 @@ SECURE_SUBDOMAIN_ORIGIN
 SameSiteStatus
 .
 STRICT
+SameSiteStatus
+.
+STRICT
 "
 Reloaded
 subdomain
@@ -357,6 +510,9 @@ SECURE_CROSS_SITE_ORIGIN
 SameSiteStatus
 .
 CROSS_SITE
+SameSiteStatus
+.
+STRICT
 "
 Reloaded
 cross
@@ -368,7 +524,7 @@ level
 form
 POSTs
 are
-not
+strictly
 same
 -
 site
