--- a/testing/web-platform/tests/cookies/samesite/window-open-reload.https.html
+++ b/testing/web-platform/tests/cookies/samesite/window-open-reload.https.html
@@ -74,12 +74,116 @@ script
 <
 script
 >
+/
+/
+This
+test
+opens
+a
+popup
+window
+to
+postToParent
+.
+py
+(
+on
+the
+specified
+/
+/
+origin
+)
+.
+The
+popup
+sends
+a
+postMessage
+event
+back
+to
+its
+opener
+/
+/
+(
+i
+.
+e
+.
+here
+)
+with
+the
+cookies
+it
+received
+which
+we
+verify
+against
+/
+/
+expectedStatus
+.
+Then
+the
+test
+sends
+a
+message
+to
+the
+popup
+telling
+it
+to
+/
+/
+reload
+itself
+via
+window
+.
+location
+.
+reload
+(
+)
+.
+Again
+the
+popup
+posts
+a
+/
+/
+message
+back
+here
+with
+the
+cookies
+it
+received
+.
+These
+cookies
+are
+verified
+/
+/
+against
+expectedStatusReload
+.
 function
 create_test
 (
 origin
 target
 expectedStatus
+expectedStatusReload
 title
 )
 {
@@ -162,6 +266,10 @@ try
 {
 verifySameSiteCookieState
 (
+reloaded
+?
+expectedStatusReload
+:
 expectedStatus
 value
 e
@@ -289,10 +397,44 @@ title
 )
 ;
 }
+/
+/
+The
+reload
+status
+is
+always
+strictly
+same
+-
+site
+because
+this
+is
+a
+site
+-
+initiated
+reload
+as
+opposed
+to
+a
+reload
+triggered
+by
+a
+user
+interface
+element
+.
 create_test
 (
 SECURE_ORIGIN
 SECURE_ORIGIN
+SameSiteStatus
+.
+STRICT
 SameSiteStatus
 .
 STRICT
@@ -319,6 +461,9 @@ SECURE_SUBDOMAIN_ORIGIN
 SameSiteStatus
 .
 STRICT
+SameSiteStatus
+.
+STRICT
 "
 Reloaded
 subdomain
@@ -340,6 +485,9 @@ SECURE_CROSS_SITE_ORIGIN
 SameSiteStatus
 .
 LAX
+SameSiteStatus
+.
+STRICT
 "
 Reloaded
 cross
