Bug 1706871 - Fix HandleInternally + Insecure Downloads r=mak
Differential Revision: https://phabricator.services.mozilla.com/D117412

UltraBlame original commit: 0f01ac89ab321792a4f77823c256d9a1fdfb666a

--- a/dom/security/test/mixedcontentblocker/download_page.html
+++ b/dom/security/test/mixedcontentblocker/download_page.html
@@ -193,6 +193,83 @@ secure
 Link
 "
 ;
+const
+insecurePDF
+=
+document
+.
+createElement
+(
+"
+a
+"
+)
+;
+insecurePDF
+.
+href
+=
+http
+:
+/
+/
+{
+host
+}
+/
+{
+path
+}
+?
+type
+=
+application
+/
+pdf
+&
+name
+=
+example
+.
+pdf
+;
+insecurePDF
+.
+download
+=
+"
+true
+"
+;
+insecurePDF
+.
+id
+=
+"
+insecurePDF
+"
+;
+insecurePDF
+.
+textContent
+=
+"
+Not
+secure
+Link
+to
+PDF
+"
+;
+document
+.
+body
+.
+append
+(
+insecurePDF
+)
+;
 document
 .
 body
