--- a/testing/web-platform/tests/html/canvas/element/drawing-text-to-the-canvas/2d.text.drawing.style.fontKerning.with.uppercase.html
+++ b/testing/web-platform/tests/html/canvas/element/drawing-text-to-the-canvas/2d.text.drawing.style.fontKerning.with.uppercase.html
@@ -286,7 +286,7 @@ ctx
 .
 fontKerning
 "
-Auto
+auto
 "
 "
 ctx
@@ -296,7 +296,7 @@ fontKerning
 "
 \
 "
-Auto
+auto
 \
 "
 "
@@ -316,7 +316,7 @@ ctx
 .
 fontKerning
 "
-Normal
+normal
 "
 "
 ctx
@@ -326,7 +326,7 @@ fontKerning
 "
 \
 "
-Normal
+normal
 \
 "
 "
@@ -354,7 +354,7 @@ ctx
 .
 fontKerning
 "
-Normal
+normal
 "
 "
 ctx
@@ -364,7 +364,7 @@ fontKerning
 "
 \
 "
-Normal
+normal
 \
 "
 "
@@ -392,7 +392,7 @@ ctx
 .
 fontKerning
 "
-Normal
+normal
 "
 "
 ctx
@@ -402,7 +402,7 @@ fontKerning
 "
 \
 "
-Normal
+normal
 \
 "
 "
@@ -430,7 +430,7 @@ ctx
 .
 fontKerning
 "
-Normal
+normal
 "
 "
 ctx
@@ -440,7 +440,7 @@ fontKerning
 "
 \
 "
-Normal
+normal
 \
 "
 "
@@ -468,7 +468,7 @@ ctx
 .
 fontKerning
 "
-Normal
+normal
 "
 "
 ctx
@@ -478,7 +478,7 @@ fontKerning
 "
 \
 "
-Normal
+normal
 \
 "
 "
@@ -498,7 +498,7 @@ ctx
 .
 fontKerning
 "
-None
+none
 "
 "
 ctx
@@ -508,7 +508,7 @@ fontKerning
 "
 \
 "
-None
+none
 \
 "
 "
@@ -536,7 +536,7 @@ ctx
 .
 fontKerning
 "
-None
+none
 "
 "
 ctx
@@ -546,7 +546,7 @@ fontKerning
 "
 \
 "
-None
+none
 \
 "
 "
@@ -574,7 +574,7 @@ ctx
 .
 fontKerning
 "
-None
+none
 "
 "
 ctx
@@ -584,7 +584,7 @@ fontKerning
 "
 \
 "
-None
+none
 \
 "
 "
@@ -612,7 +612,7 @@ ctx
 .
 fontKerning
 "
-None
+none
 "
 "
 ctx
@@ -622,7 +622,7 @@ fontKerning
 "
 \
 "
-None
+none
 \
 "
 "
@@ -650,7 +650,7 @@ ctx
 .
 fontKerning
 "
-None
+none
 "
 "
 ctx
@@ -660,7 +660,7 @@ fontKerning
 "
 \
 "
-None
+none
 \
 "
 "
