--- a/testing/web-platform/tests/html/canvas/element/drawing-text-to-the-canvas/2d.text.drawing.style.fontVariant.settings.html
+++ b/testing/web-platform/tests/html/canvas/element/drawing-text-to-the-canvas/2d.text.drawing.style.fontVariant.settings.html
@@ -289,7 +289,7 @@ ctx
 .
 fontVariantCaps
 "
-Normal
+normal
 "
 "
 ctx
@@ -299,7 +299,7 @@ fontVariantCaps
 "
 \
 "
-Normal
+normal
 \
 "
 "
@@ -319,7 +319,7 @@ ctx
 .
 fontVariantCaps
 "
-Normal
+normal
 "
 "
 ctx
@@ -329,7 +329,7 @@ fontVariantCaps
 "
 \
 "
-Normal
+normal
 \
 "
 "
@@ -351,7 +351,9 @@ ctx
 .
 fontVariantCaps
 "
-SmallCaps
+small
+-
+caps
 "
 "
 ctx
@@ -361,7 +363,9 @@ fontVariantCaps
 "
 \
 "
-SmallCaps
+small
+-
+caps
 \
 "
 "
@@ -385,7 +389,11 @@ ctx
 .
 fontVariantCaps
 "
-AllSmallCaps
+all
+-
+small
+-
+caps
 "
 "
 ctx
@@ -395,7 +403,11 @@ fontVariantCaps
 "
 \
 "
-AllSmallCaps
+all
+-
+small
+-
+caps
 \
 "
 "
@@ -417,7 +429,9 @@ ctx
 .
 fontVariantCaps
 "
-PetiteCaps
+petite
+-
+caps
 "
 "
 ctx
@@ -427,7 +441,9 @@ fontVariantCaps
 "
 \
 "
-PetiteCaps
+petite
+-
+caps
 \
 "
 "
@@ -451,7 +467,11 @@ ctx
 .
 fontVariantCaps
 "
-AllPetiteCaps
+all
+-
+petite
+-
+caps
 "
 "
 ctx
@@ -461,7 +481,11 @@ fontVariantCaps
 "
 \
 "
-AllPetiteCaps
+all
+-
+petite
+-
+caps
 \
 "
 "
@@ -481,7 +505,7 @@ ctx
 .
 fontVariantCaps
 "
-Unicase
+unicase
 "
 "
 ctx
@@ -491,7 +515,7 @@ fontVariantCaps
 "
 \
 "
-Unicase
+unicase
 \
 "
 "
@@ -513,7 +537,9 @@ ctx
 .
 fontVariantCaps
 "
-TitlingCaps
+titling
+-
+caps
 "
 "
 ctx
@@ -523,7 +549,9 @@ fontVariantCaps
 "
 \
 "
-TitlingCaps
+titling
+-
+caps
 \
 "
 "
@@ -555,7 +583,7 @@ ctx
 .
 fontVariantCaps
 "
-Normal
+normal
 "
 "
 ctx
@@ -565,7 +593,7 @@ fontVariantCaps
 "
 \
 "
-Normal
+normal
 \
 "
 "
@@ -587,7 +615,9 @@ ctx
 .
 fontVariantCaps
 "
-SmallCaps
+small
+-
+caps
 "
 "
 ctx
@@ -597,7 +627,9 @@ fontVariantCaps
 "
 \
 "
-SmallCaps
+small
+-
+caps
 \
 "
 "
@@ -621,7 +653,11 @@ ctx
 .
 fontVariantCaps
 "
-AllSmallCaps
+all
+-
+small
+-
+caps
 "
 "
 ctx
@@ -631,7 +667,11 @@ fontVariantCaps
 "
 \
 "
-AllSmallCaps
+all
+-
+small
+-
+caps
 \
 "
 "
@@ -653,7 +693,9 @@ ctx
 .
 fontVariantCaps
 "
-PetiteCaps
+petite
+-
+caps
 "
 "
 ctx
@@ -663,7 +705,9 @@ fontVariantCaps
 "
 \
 "
-PetiteCaps
+petite
+-
+caps
 \
 "
 "
@@ -687,7 +731,11 @@ ctx
 .
 fontVariantCaps
 "
-AllPetiteCaps
+all
+-
+petite
+-
+caps
 "
 "
 ctx
@@ -697,7 +745,11 @@ fontVariantCaps
 "
 \
 "
-AllPetiteCaps
+all
+-
+petite
+-
+caps
 \
 "
 "
@@ -717,7 +769,7 @@ ctx
 .
 fontVariantCaps
 "
-Unicase
+unicase
 "
 "
 ctx
@@ -727,7 +779,7 @@ fontVariantCaps
 "
 \
 "
-Unicase
+unicase
 \
 "
 "
@@ -749,7 +801,9 @@ ctx
 .
 fontVariantCaps
 "
-TitlingCaps
+titling
+-
+caps
 "
 "
 ctx
@@ -759,7 +813,9 @@ fontVariantCaps
 "
 \
 "
-TitlingCaps
+titling
+-
+caps
 \
 "
 "
@@ -790,7 +846,9 @@ ctx
 .
 fontVariantCaps
 "
-TitlingCaps
+titling
+-
+caps
 "
 "
 ctx
@@ -800,7 +858,9 @@ fontVariantCaps
 "
 \
 "
-TitlingCaps
+titling
+-
+caps
 \
 "
 "
