--- a/testing/web-platform/tests/html/canvas/offscreen/text/2d.text.drawing.style.fontKerning.with.uppercase.html
+++ b/testing/web-platform/tests/html/canvas/offscreen/text/2d.text.drawing.style.fontKerning.with.uppercase.html
@@ -235,7 +235,7 @@ ctx
 .
 fontKerning
 "
-Auto
+auto
 "
 "
 ctx
@@ -245,7 +245,7 @@ fontKerning
 "
 \
 "
-Auto
+auto
 \
 "
 "
@@ -265,7 +265,7 @@ ctx
 .
 fontKerning
 "
-Normal
+normal
 "
 "
 ctx
@@ -275,7 +275,7 @@ fontKerning
 "
 \
 "
-Normal
+normal
 \
 "
 "
@@ -286,7 +286,7 @@ ctx
 fontKerning
 =
 "
-Auto
+auto
 "
 ;
 ctx
@@ -303,7 +303,7 @@ ctx
 .
 fontKerning
 "
-Normal
+normal
 "
 "
 ctx
@@ -313,7 +313,7 @@ fontKerning
 "
 \
 "
-Normal
+normal
 \
 "
 "
@@ -324,7 +324,7 @@ ctx
 fontKerning
 =
 "
-Auto
+auto
 "
 ;
 ctx
@@ -341,7 +341,7 @@ ctx
 .
 fontKerning
 "
-Normal
+normal
 "
 "
 ctx
@@ -351,7 +351,7 @@ fontKerning
 "
 \
 "
-Normal
+normal
 \
 "
 "
@@ -362,7 +362,7 @@ ctx
 fontKerning
 =
 "
-Auto
+auto
 "
 ;
 ctx
@@ -379,7 +379,7 @@ ctx
 .
 fontKerning
 "
-Normal
+normal
 "
 "
 ctx
@@ -389,7 +389,7 @@ fontKerning
 "
 \
 "
-Normal
+normal
 \
 "
 "
@@ -400,7 +400,7 @@ ctx
 fontKerning
 =
 "
-Auto
+auto
 "
 ;
 ctx
@@ -417,7 +417,7 @@ ctx
 .
 fontKerning
 "
-Normal
+normal
 "
 "
 ctx
@@ -427,7 +427,7 @@ fontKerning
 "
 \
 "
-Normal
+normal
 \
 "
 "
@@ -447,7 +447,7 @@ ctx
 .
 fontKerning
 "
-None
+none
 "
 "
 ctx
@@ -457,7 +457,7 @@ fontKerning
 "
 \
 "
-None
+none
 \
 "
 "
@@ -468,7 +468,7 @@ ctx
 fontKerning
 =
 "
-Auto
+auto
 "
 ;
 ctx
@@ -485,7 +485,7 @@ ctx
 .
 fontKerning
 "
-None
+none
 "
 "
 ctx
@@ -495,7 +495,7 @@ fontKerning
 "
 \
 "
-None
+none
 \
 "
 "
@@ -506,7 +506,7 @@ ctx
 fontKerning
 =
 "
-Auto
+auto
 "
 ;
 ctx
@@ -523,7 +523,7 @@ ctx
 .
 fontKerning
 "
-None
+none
 "
 "
 ctx
@@ -533,7 +533,7 @@ fontKerning
 "
 \
 "
-None
+none
 \
 "
 "
@@ -544,7 +544,7 @@ ctx
 fontKerning
 =
 "
-Auto
+auto
 "
 ;
 ctx
@@ -561,7 +561,7 @@ ctx
 .
 fontKerning
 "
-None
+none
 "
 "
 ctx
@@ -571,7 +571,7 @@ fontKerning
 "
 \
 "
-None
+none
 \
 "
 "
@@ -582,7 +582,7 @@ ctx
 fontKerning
 =
 "
-Auto
+auto
 "
 ;
 ctx
@@ -599,7 +599,7 @@ ctx
 .
 fontKerning
 "
-None
+none
 "
 "
 ctx
@@ -609,7 +609,7 @@ fontKerning
 "
 \
 "
-None
+none
 \
 "
 "
