--- a/testing/web-platform/tests/html/canvas/offscreen/text/2d.text.drawing.style.fontVariant.settings.html
+++ b/testing/web-platform/tests/html/canvas/offscreen/text/2d.text.drawing.style.fontVariant.settings.html
@@ -238,7 +238,7 @@ ctx
 .
 fontVariantCaps
 "
-Normal
+normal
 "
 "
 ctx
@@ -248,7 +248,7 @@ fontVariantCaps
 "
 \
 "
-Normal
+normal
 \
 "
 "
@@ -268,7 +268,7 @@ ctx
 .
 fontVariantCaps
 "
-Normal
+normal
 "
 "
 ctx
@@ -278,7 +278,7 @@ fontVariantCaps
 "
 \
 "
-Normal
+normal
 \
 "
 "
@@ -300,7 +300,9 @@ ctx
 .
 fontVariantCaps
 "
-SmallCaps
+small
+-
+caps
 "
 "
 ctx
@@ -310,7 +312,9 @@ fontVariantCaps
 "
 \
 "
-SmallCaps
+small
+-
+caps
 \
 "
 "
@@ -334,7 +338,11 @@ ctx
 .
 fontVariantCaps
 "
-AllSmallCaps
+all
+-
+small
+-
+caps
 "
 "
 ctx
@@ -344,7 +352,11 @@ fontVariantCaps
 "
 \
 "
-AllSmallCaps
+all
+-
+small
+-
+caps
 \
 "
 "
@@ -366,7 +378,9 @@ ctx
 .
 fontVariantCaps
 "
-PetiteCaps
+petite
+-
+caps
 "
 "
 ctx
@@ -376,7 +390,9 @@ fontVariantCaps
 "
 \
 "
-PetiteCaps
+petite
+-
+caps
 \
 "
 "
@@ -400,7 +416,11 @@ ctx
 .
 fontVariantCaps
 "
-AllPetiteCaps
+all
+-
+petite
+-
+caps
 "
 "
 ctx
@@ -410,7 +430,11 @@ fontVariantCaps
 "
 \
 "
-AllPetiteCaps
+all
+-
+petite
+-
+caps
 \
 "
 "
@@ -430,7 +454,7 @@ ctx
 .
 fontVariantCaps
 "
-Unicase
+unicase
 "
 "
 ctx
@@ -440,7 +464,7 @@ fontVariantCaps
 "
 \
 "
-Unicase
+unicase
 \
 "
 "
@@ -462,7 +486,9 @@ ctx
 .
 fontVariantCaps
 "
-TitlingCaps
+titling
+-
+caps
 "
 "
 ctx
@@ -472,7 +498,9 @@ fontVariantCaps
 "
 \
 "
-TitlingCaps
+titling
+-
+caps
 \
 "
 "
@@ -504,7 +532,7 @@ ctx
 .
 fontVariantCaps
 "
-Normal
+normal
 "
 "
 ctx
@@ -514,7 +542,7 @@ fontVariantCaps
 "
 \
 "
-Normal
+normal
 \
 "
 "
@@ -536,7 +564,9 @@ ctx
 .
 fontVariantCaps
 "
-SmallCaps
+small
+-
+caps
 "
 "
 ctx
@@ -546,7 +576,9 @@ fontVariantCaps
 "
 \
 "
-SmallCaps
+small
+-
+caps
 \
 "
 "
@@ -570,7 +602,11 @@ ctx
 .
 fontVariantCaps
 "
-AllSmallCaps
+all
+-
+small
+-
+caps
 "
 "
 ctx
@@ -580,7 +616,11 @@ fontVariantCaps
 "
 \
 "
-AllSmallCaps
+all
+-
+small
+-
+caps
 \
 "
 "
@@ -602,7 +642,9 @@ ctx
 .
 fontVariantCaps
 "
-PetiteCaps
+petite
+-
+caps
 "
 "
 ctx
@@ -612,7 +654,9 @@ fontVariantCaps
 "
 \
 "
-PetiteCaps
+petite
+-
+caps
 \
 "
 "
@@ -636,7 +680,11 @@ ctx
 .
 fontVariantCaps
 "
-AllPetiteCaps
+all
+-
+petite
+-
+caps
 "
 "
 ctx
@@ -646,7 +694,11 @@ fontVariantCaps
 "
 \
 "
-AllPetiteCaps
+all
+-
+petite
+-
+caps
 \
 "
 "
@@ -666,7 +718,7 @@ ctx
 .
 fontVariantCaps
 "
-Unicase
+unicase
 "
 "
 ctx
@@ -676,7 +728,7 @@ fontVariantCaps
 "
 \
 "
-Unicase
+unicase
 \
 "
 "
@@ -698,7 +750,9 @@ ctx
 .
 fontVariantCaps
 "
-TitlingCaps
+titling
+-
+caps
 "
 "
 ctx
@@ -708,7 +762,9 @@ fontVariantCaps
 "
 \
 "
-TitlingCaps
+titling
+-
+caps
 \
 "
 "
@@ -739,7 +795,9 @@ ctx
 .
 fontVariantCaps
 "
-TitlingCaps
+titling
+-
+caps
 "
 "
 ctx
@@ -749,7 +807,9 @@ fontVariantCaps
 "
 \
 "
-TitlingCaps
+titling
+-
+caps
 \
 "
 "
