--- a/testing/web-platform/tests/html/canvas/offscreen/text/2d.text.drawing.style.textRendering.settings.html
+++ b/testing/web-platform/tests/html/canvas/offscreen/text/2d.text.drawing.style.textRendering.settings.html
@@ -238,7 +238,7 @@ ctx
 .
 textRendering
 "
-Auto
+auto
 "
 "
 ctx
@@ -248,7 +248,7 @@ textRendering
 "
 \
 "
-Auto
+auto
 \
 "
 "
@@ -268,7 +268,7 @@ ctx
 .
 textRendering
 "
-Auto
+auto
 "
 "
 ctx
@@ -278,7 +278,7 @@ textRendering
 "
 \
 "
-Auto
+auto
 \
 "
 "
@@ -298,7 +298,7 @@ ctx
 .
 textRendering
 "
-OptimizeSpeed
+optimizeSpeed
 "
 "
 ctx
@@ -308,7 +308,7 @@ textRendering
 "
 \
 "
-OptimizeSpeed
+optimizeSpeed
 \
 "
 "
@@ -328,7 +328,7 @@ ctx
 .
 textRendering
 "
-OptimizeLegibility
+optimizeLegibility
 "
 "
 ctx
@@ -338,7 +338,7 @@ textRendering
 "
 \
 "
-OptimizeLegibility
+optimizeLegibility
 \
 "
 "
@@ -358,7 +358,7 @@ ctx
 .
 textRendering
 "
-GeometricPrecision
+geometricPrecision
 "
 "
 ctx
@@ -368,7 +368,7 @@ textRendering
 "
 \
 "
-GeometricPrecision
+geometricPrecision
 \
 "
 "
@@ -400,7 +400,7 @@ ctx
 .
 textRendering
 "
-Auto
+auto
 "
 "
 ctx
@@ -410,7 +410,7 @@ textRendering
 "
 \
 "
-Auto
+auto
 \
 "
 "
@@ -430,7 +430,7 @@ ctx
 .
 textRendering
 "
-OptimizeSpeed
+optimizeSpeed
 "
 "
 ctx
@@ -440,7 +440,7 @@ textRendering
 "
 \
 "
-OptimizeSpeed
+optimizeSpeed
 \
 "
 "
@@ -460,7 +460,7 @@ ctx
 .
 textRendering
 "
-OptimizeLegibility
+optimizeLegibility
 "
 "
 ctx
@@ -470,7 +470,7 @@ textRendering
 "
 \
 "
-OptimizeLegibility
+optimizeLegibility
 \
 "
 "
@@ -490,7 +490,7 @@ ctx
 .
 textRendering
 "
-GeometricPrecision
+geometricPrecision
 "
 "
 ctx
@@ -500,7 +500,7 @@ textRendering
 "
 \
 "
-GeometricPrecision
+geometricPrecision
 \
 "
 "
@@ -531,7 +531,7 @@ ctx
 .
 textRendering
 "
-GeometricPrecision
+geometricPrecision
 "
 "
 ctx
@@ -541,7 +541,7 @@ textRendering
 "
 \
 "
-GeometricPrecision
+geometricPrecision
 \
 "
 "
