--- a/testing/web-platform/tests/html/canvas/element/drawing-text-to-the-canvas/2d.text.drawing.style.textRendering.settings.html
+++ b/testing/web-platform/tests/html/canvas/element/drawing-text-to-the-canvas/2d.text.drawing.style.textRendering.settings.html
@@ -289,7 +289,7 @@ ctx
 .
 textRendering
 "
-Auto
+auto
 "
 "
 ctx
@@ -299,7 +299,7 @@ textRendering
 "
 \
 "
-Auto
+auto
 \
 "
 "
@@ -319,7 +319,7 @@ ctx
 .
 textRendering
 "
-Auto
+auto
 "
 "
 ctx
@@ -329,7 +329,7 @@ textRendering
 "
 \
 "
-Auto
+auto
 \
 "
 "
@@ -349,7 +349,7 @@ ctx
 .
 textRendering
 "
-OptimizeSpeed
+optimizeSpeed
 "
 "
 ctx
@@ -359,7 +359,7 @@ textRendering
 "
 \
 "
-OptimizeSpeed
+optimizeSpeed
 \
 "
 "
@@ -379,7 +379,7 @@ ctx
 .
 textRendering
 "
-OptimizeLegibility
+optimizeLegibility
 "
 "
 ctx
@@ -389,7 +389,7 @@ textRendering
 "
 \
 "
-OptimizeLegibility
+optimizeLegibility
 \
 "
 "
@@ -409,7 +409,7 @@ ctx
 .
 textRendering
 "
-GeometricPrecision
+geometricPrecision
 "
 "
 ctx
@@ -419,7 +419,7 @@ textRendering
 "
 \
 "
-GeometricPrecision
+geometricPrecision
 \
 "
 "
@@ -451,7 +451,7 @@ ctx
 .
 textRendering
 "
-Auto
+auto
 "
 "
 ctx
@@ -461,7 +461,7 @@ textRendering
 "
 \
 "
-Auto
+auto
 \
 "
 "
@@ -481,7 +481,7 @@ ctx
 .
 textRendering
 "
-OptimizeSpeed
+optimizeSpeed
 "
 "
 ctx
@@ -491,7 +491,7 @@ textRendering
 "
 \
 "
-OptimizeSpeed
+optimizeSpeed
 \
 "
 "
@@ -511,7 +511,7 @@ ctx
 .
 textRendering
 "
-OptimizeLegibility
+optimizeLegibility
 "
 "
 ctx
@@ -521,7 +521,7 @@ textRendering
 "
 \
 "
-OptimizeLegibility
+optimizeLegibility
 \
 "
 "
@@ -541,7 +541,7 @@ ctx
 .
 textRendering
 "
-GeometricPrecision
+geometricPrecision
 "
 "
 ctx
@@ -551,7 +551,7 @@ textRendering
 "
 \
 "
-GeometricPrecision
+geometricPrecision
 \
 "
 "
@@ -582,7 +582,7 @@ ctx
 .
 textRendering
 "
-GeometricPrecision
+geometricPrecision
 "
 "
 ctx
@@ -592,7 +592,7 @@ textRendering
 "
 \
 "
-GeometricPrecision
+geometricPrecision
 \
 "
 "
