--- a/testing/web-platform/tests/html/canvas/offscreen/text/2d.text.drawing.style.fontKerning.html
+++ b/testing/web-platform/tests/html/canvas/offscreen/text/2d.text.drawing.style.fontKerning.html
@@ -227,7 +227,7 @@ ctx
 .
 fontKerning
 "
-Auto
+auto
 "
 "
 ctx
@@ -237,7 +237,7 @@ fontKerning
 "
 \
 "
-Auto
+auto
 \
 "
 "
@@ -248,7 +248,7 @@ ctx
 fontKerning
 =
 "
-Normal
+normal
 "
 ;
 _assertSame
@@ -257,7 +257,7 @@ ctx
 .
 fontKerning
 "
-Normal
+normal
 "
 "
 ctx
@@ -267,7 +267,7 @@ fontKerning
 "
 \
 "
-Normal
+normal
 \
 "
 "
@@ -291,7 +291,7 @@ ctx
 fontKerning
 =
 "
-None
+none
 "
 ;
 _assertSame
@@ -300,7 +300,7 @@ ctx
 .
 fontKerning
 "
-None
+none
 "
 "
 ctx
@@ -310,7 +310,7 @@ fontKerning
 "
 \
 "
-None
+none
 \
 "
 "
