--- a/testing/web-platform/tests/html/cross-origin-opener-policy/popup-coop-by-sw.https.html
+++ b/testing/web-platform/tests/html/cross-origin-opener-policy/popup-coop-by-sw.https.html
@@ -1,35 +1,4 @@
 <
-!
-doctype
-html
->
-<
-html
->
-<
-head
->
-<
-title
->
-Check
-ServiceWorkers
-can
-set
-COOP
-/
-COEP
-headers
-for
-documents
-'
-s
-responses
-<
-/
-title
->
-<
 meta
 name
 =
@@ -43,17 +12,47 @@ long
 "
 >
 <
+meta
+name
+=
+"
+variant
+"
+content
+=
+"
+?
+1
+-
+4
+"
+>
+<
+meta
+name
+=
+"
+variant
+"
+content
+=
+"
+?
+5
+-
+last
+"
+>
+<
 script
 src
 =
-"
 /
 resources
 /
 testharness
 .
 js
-"
 >
 <
 /
@@ -63,14 +62,12 @@ script
 script
 src
 =
-"
 /
 resources
 /
 testharnessreport
 .
 js
-"
 >
 <
 /
@@ -84,7 +81,9 @@ src
 /
 common
 /
-utils
+subset
+-
+tests
 .
 js
 "
@@ -127,17 +126,10 @@ script
 src
 =
 "
-.
 /
-resources
+common
 /
-popup
--
-coop
--
-by
--
-sw
+utils
 .
 js
 "
@@ -147,115 +139,871 @@ js
 script
 >
 <
+script
+src
+=
+"
 /
-head
+common
+/
+get
+-
+host
+-
+info
+.
+sub
+.
+js
+"
 >
 <
-body
+/
+script
+>
+<
+script
+src
+=
+"
+.
+/
+resources
+/
+dispatcher
+.
+js
+"
+>
+<
+/
+script
 >
 <
 script
 >
+const
+resources
+=
+"
 /
+html
 /
-The
-current
-document
-do
-not
-have
-COOP
+cross
+-
+origin
+-
+opener
+-
+policy
 /
-COEP
-defined
+resources
+"
+;
+const
+executor_path
+=
+resources
++
+"
+/
+executor
 .
+html
+?
+pipe
+=
+"
+;
+const
+sw_executor_path
+=
+resources
++
+"
+/
+sw_executor
+.
+js
+?
+pipe
+=
+"
+;
+const
+coop_header
+=
+|
+header
+(
+Cross
+-
+Origin
+-
+Opener
+-
+Policy
+same
+-
+origin
+)
+;
+const
+coep_header
+=
+|
+header
+(
+Cross
+-
+Origin
+-
+Embedder
+-
+Policy
+require
+-
+corp
+)
+;
+const
+https_origin
+=
+get_host_info
+(
+)
+.
+HTTPS_ORIGIN
+;
+const
+swap_browsing_context_group
+=
+true
+;
+const
+keep_browsing_context_group
+=
+false
+;
+const
+opener_basic
+=
+"
+"
+;
+const
+opener_coi
+=
+coop_header
++
+coep_header
+;
+const
+sw_basic
+=
+"
+"
+;
+const
+sw_coi
+=
+coop_header
++
+coep_header
+;
+const
+openee_basic
+=
+{
+'
+content
+-
+type
+'
+:
+'
+text
+/
+html
+'
+}
+;
+const
+openee_coi
+=
+{
+'
+content
+-
+type
+'
+:
+'
+text
+/
+html
+'
+'
+cross
+-
+origin
+-
+embedder
+-
+policy
+'
+:
+'
+require
+-
+corp
+'
+'
+cross
+-
+origin
+-
+opener
+-
+policy
+'
+:
+'
+same
+-
+origin
+'
+}
+;
+/
+/
 A
+document
+opens
+a
 popup
-will
-be
-opened
 .
+The
+popup
+'
+s
+document
+is
+served
+from
+a
+synthetic
 /
 /
-Its
 response
-will
-be
-provided
 by
 a
 ServiceWorker
 .
-A
-browsing
-context
-group
+Check
+how
+cross
+-
+origin
+isolation
+works
+in
+this
 /
 /
-swap
-must
-happen
-if
+case
+.
+const
+popupCoopBySwTest
+=
+(
+description
+/
+/
+Test
+parameters
+:
+opener_headers
+openee_headers
+sw_headers
+/
+/
+Test
+expectations
+:
+expected_browing_context_group
+)
+=
+>
+{
+subsetTest
+(
+promise_test
+async
+test
+=
+>
+{
+const
+driver_token
+=
+token
+(
+)
+;
+/
+/
+1
+.
+Create
 the
-popup
+opener
+.
+const
+opener_token
+=
+token
+(
+)
+;
+const
+opener_url
+=
+https_origin
++
+executor_path
++
+opener_headers
++
+&
+uuid
+=
+{
+opener_token
+}
+;
+const
+opener_window
+=
+window
+.
+open
+(
+opener_url
+)
+;
+test
+.
+add_cleanup
+(
+(
+)
+=
+>
+opener_window
+.
+close
+(
+)
+)
+;
+/
+/
+2
+.
+Define
+the
+openee
 '
 s
-headers
-contains
-COOP
-/
-COEP
-headers
+URL
+as
+being
+served
+by
+the
+service
+worker
 .
-popupCoopBySwTest
+const
+openee_url
+=
+https_origin
++
+resources
++
+"
+/
+proxied
+?
+"
++
+token
 (
-"
-sw_normal
-popup_normal
-"
-sw_normal
-popup_normal
-keep_browsing_context_group
 )
-popupCoopBySwTest
+;
+/
+/
+3
+.
+Register
+install
+and
+activate
+a
+ServiceWorker
+serving
+the
+openee_url
+.
+const
+sw_token
+=
+token
+(
+)
+;
+const
+sw_url
+=
+https_origin
++
+sw_executor_path
++
+sw_headers
++
+&
+uuid
+=
+{
+sw_token
+}
+;
+const
+sw_scope
+=
+openee_url
+;
+/
+/
+One
+-
+time
+scope
+because
+of
+the
+token
+.
+const
+sw_registration
+=
+await
+service_worker_unregister_and_register
+(
+test
+sw_url
+sw_scope
+)
+;
+test
+.
+add_cleanup
+(
+(
+)
+=
+>
+sw_registration
+.
+unregister
+(
+)
+)
+;
+await
+wait_for_state
+(
+test
+sw_registration
+.
+installing
+'
+activated
+'
+)
+;
+send
+(
+sw_token
+fetchHandler
+=
+event
+=
+>
+{
+if
+(
+!
+event
+.
+request
+.
+url
+.
+includes
 (
 "
-sw_normal
-popup_coop
+proxied
 "
-sw_normal
-popup_coop
+)
+)
+return
+;
+const
+response
+=
+new
+Response
+(
+\
+<
+script
+src
+=
+"
+.
+/
+dispatcher
+.
+js
+"
+>
+<
+/
+scr
+\
++
+\
+ipt
+>
+<
+script
+>
+send
+(
+"
+{
+driver_token
+}
+"
+opener
+?
+"
+opener
+is
+set
+"
+:
+"
+opener
+is
+null
+"
+)
+;
+<
+/
+scr
+\
++
+\
+ipt
+>
+\
+{
+status
+:
+200
+headers
+:
+{
+JSON
+.
+stringify
+(
+openee_headers
+)
+}
+}
+)
+;
+event
+.
+respondWith
+(
+response
+)
+;
+}
+await
+clients
+.
+claim
+(
+)
+;
+send
+(
+"
+{
+driver_token
+}
+"
+serviceWorker
+.
+state
+)
+;
+)
+assert_equals
+(
+await
+receive
+(
+driver_token
+)
+"
+activated
+"
+)
+;
+/
+/
+4
+.
+The
+opener
+opens
+a
+popup
+.
+Its
+document
+is
+a
+synthetic
+response
+served
+/
+/
+from
+the
+Service
+Worker
+.
+send
+(
+opener_token
+window
+.
+open
+(
+"
+{
+openee_url
+}
+"
+)
+;
+)
+;
+assert_equals
+(
+await
+receive
+(
+driver_token
+)
+(
+expected_browing_context_group
+=
+=
 swap_browsing_context_group
 )
+?
+"
+opener
+is
+null
+"
+:
+"
+opener
+is
+set
+"
+)
+;
+}
+description
+)
+;
+}
+;
 popupCoopBySwTest
 (
 "
-sw_coop
-popup_normal
+opener
+:
+basic
+openee
+:
+basic
+sw
+:
+basic
 "
-sw_coop
-popup_normal
+opener_basic
+openee_basic
+sw_basic
 keep_browsing_context_group
 )
+;
 popupCoopBySwTest
 (
 "
-sw_coop
-popup_coop
+opener
+:
+basic
+openee
+:
+basic
+sw
+:
+coi
 "
-sw_coop
-popup_coop
+opener_basic
+openee_basic
+sw_coi
+keep_browsing_context_group
+)
+;
+popupCoopBySwTest
+(
+"
+opener
+:
+basic
+openee
+:
+coi
+sw
+:
+basic
+"
+opener_basic
+openee_coi
+sw_basic
 swap_browsing_context_group
 )
+;
+popupCoopBySwTest
+(
+"
+opener
+:
+basic
+openee
+:
+coi
+sw
+:
+coi
+"
+opener_basic
+openee_coi
+sw_coi
+swap_browsing_context_group
+)
+;
+popupCoopBySwTest
+(
+"
+opener
+:
+coi
+openee
+:
+basic
+sw
+:
+basic
+"
+opener_coi
+openee_basic
+sw_basic
+swap_browsing_context_group
+)
+;
+popupCoopBySwTest
+(
+"
+opener
+:
+coi
+openee
+:
+basic
+sw
+:
+coi
+"
+opener_coi
+openee_basic
+sw_coi
+swap_browsing_context_group
+)
+;
+popupCoopBySwTest
+(
+"
+opener
+:
+coi
+openee
+:
+coi
+sw
+:
+basic
+"
+opener_coi
+openee_coi
+sw_basic
+keep_browsing_context_group
+)
+;
+popupCoopBySwTest
+(
+"
+opener
+:
+coi
+openee
+:
+coi
+sw
+:
+coi
+"
+opener_coi
+openee_coi
+sw_coi
+keep_browsing_context_group
+)
+;
 <
 /
 script
->
-<
-/
-body
->
-<
-/
-html
 >
