Bug 1722787 [wpt PR 29821] - Rename Canvas2D.textWordSpacing to Canvas2D.wordSpacing, a=testonly
Automatic update from web-platform-tests
Rename Canvas2D.textWordSpacing to Canvas2D.wordSpacing

Per discussion in https://github.com/w3ctag/design-reviews/issues/627,
we have agreed to remove text prefix for attribute textWordSpacing. So
that thee attribute name wordSpacing follows the same naming conversion
of other text attributes.

Bug: 1233706

Change-Id: Ic735c7c4617572511fd37fe0928f8919e7fd3f69
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3056391
Reviewed-by: Bo <boliuchromium.org>
Reviewed-by: Aaron Krajeski <aaronhkchromium.org>
Commit-Queue: Yi Xu <yiyixchromium.org>
Cr-Commit-Position: refs/heads/master{#906470}

--

wpt-commits: 7666067297aef38ba695aac42f703e627d9c6dd9
wpt-pr: 29821

UltraBlame original commit: 2e9f637268123d1f53bd3c954e2422917d340019

--- a/testing/web-platform/tests/html/canvas/element/drawing-text-to-the-canvas/2d.text.drawing.style.spacing.html
+++ b/testing/web-platform/tests/html/canvas/element/drawing-text-to-the-canvas/2d.text.drawing.style.spacing.html
@@ -290,12 +290,12 @@ _assertSame
 (
 ctx
 .
-textWordSpacing
+wordSpacing
 0
 "
 ctx
 .
-textWordSpacing
+wordSpacing
 "
 "
 0
@@ -328,12 +328,12 @@ _assertSame
 (
 ctx
 .
-textWordSpacing
+wordSpacing
 0
 "
 ctx
 .
-textWordSpacing
+wordSpacing
 "
 "
 0
@@ -342,7 +342,7 @@ textWordSpacing
 ;
 ctx
 .
-textWordSpacing
+wordSpacing
 =
 5
 ;
@@ -366,12 +366,12 @@ _assertSame
 (
 ctx
 .
-textWordSpacing
+wordSpacing
 5
 "
 ctx
 .
-textWordSpacing
+wordSpacing
 "
 "
 5
@@ -387,7 +387,7 @@ textLetterSpacing
 ;
 ctx
 .
-textWordSpacing
+wordSpacing
 =
 -
 1
@@ -414,13 +414,13 @@ _assertSame
 (
 ctx
 .
-textWordSpacing
+wordSpacing
 -
 1
 "
 ctx
 .
-textWordSpacing
+wordSpacing
 "
 "
 -
