--- a/testing/web-platform/tests/html/canvas/element/drawing-text-to-the-canvas/2d.text.drawing.style.spacing.measure.html
+++ b/testing/web-platform/tests/html/canvas/element/drawing-text-to-the-canvas/2d.text.drawing.style.spacing.measure.html
@@ -294,12 +294,12 @@ _assertSame
 (
 ctx
 .
-textWordSpacing
+wordSpacing
 0
 "
 ctx
 .
-textWordSpacing
+wordSpacing
 "
 "
 0
@@ -347,12 +347,12 @@ _assertSame
 (
 ctx
 .
-textWordSpacing
+wordSpacing
 0
 "
 ctx
 .
-textWordSpacing
+wordSpacing
 "
 "
 0
@@ -408,7 +408,7 @@ width_normal
 ;
 ctx
 .
-textWordSpacing
+wordSpacing
 =
 5
 ;
@@ -438,12 +438,12 @@ _assertSame
 (
 ctx
 .
-textWordSpacing
+wordSpacing
 5
 "
 ctx
 .
-textWordSpacing
+wordSpacing
 "
 "
 5
@@ -509,7 +509,7 @@ textLetterSpacing
 ;
 ctx
 .
-textWordSpacing
+wordSpacing
 =
 -
 1
@@ -536,13 +536,13 @@ _assertSame
 (
 ctx
 .
-textWordSpacing
+wordSpacing
 -
 1
 "
 ctx
 .
-textWordSpacing
+wordSpacing
 "
 "
 -
