--- a/testing/web-platform/tests/html/canvas/element/drawing-text-to-the-canvas/2d.text.drawing.style.nonfinite.spacing.html
+++ b/testing/web-platform/tests/html/canvas/element/drawing-text-to-the-canvas/2d.text.drawing.style.nonfinite.spacing.html
@@ -300,12 +300,12 @@ _assertSame
 (
 ctx
 .
-textWordSpacing
+wordSpacing
 0
 "
 ctx
 .
-textWordSpacing
+wordSpacing
 "
 "
 0
@@ -320,7 +320,7 @@ value
 {
 ctx
 .
-textWordSpacing
+wordSpacing
 =
 value
 ;
@@ -334,12 +334,12 @@ _assertSame
 (
 ctx
 .
-textWordSpacing
+wordSpacing
 0
 "
 ctx
 .
-textWordSpacing
+wordSpacing
 "
 "
 0
