--- a/testing/web-platform/tests/html/canvas/offscreen/text/2d.text.drawing.style.nonfinite.spacing.html
+++ b/testing/web-platform/tests/html/canvas/offscreen/text/2d.text.drawing.style.nonfinite.spacing.html
@@ -249,12 +249,12 @@ _assertSame
 (
 ctx
 .
-textWordSpacing
+wordSpacing
 0
 "
 ctx
 .
-textWordSpacing
+wordSpacing
 "
 "
 0
@@ -269,7 +269,7 @@ value
 {
 ctx
 .
-textWordSpacing
+wordSpacing
 =
 value
 ;
@@ -283,12 +283,12 @@ _assertSame
 (
 ctx
 .
-textWordSpacing
+wordSpacing
 0
 "
 ctx
 .
-textWordSpacing
+wordSpacing
 "
 "
 0
