--- a/testing/web-platform/tests/html/canvas/offscreen/text/2d.text.drawing.style.spacing.html
+++ b/testing/web-platform/tests/html/canvas/offscreen/text/2d.text.drawing.style.spacing.html
@@ -239,12 +239,12 @@ _assertSame
 (
 ctx
 .
-textWordSpacing
+wordSpacing
 0
 "
 ctx
 .
-textWordSpacing
+wordSpacing
 "
 "
 0
@@ -277,12 +277,12 @@ _assertSame
 (
 ctx
 .
-textWordSpacing
+wordSpacing
 0
 "
 ctx
 .
-textWordSpacing
+wordSpacing
 "
 "
 0
@@ -291,7 +291,7 @@ textWordSpacing
 ;
 ctx
 .
-textWordSpacing
+wordSpacing
 =
 5
 ;
@@ -315,12 +315,12 @@ _assertSame
 (
 ctx
 .
-textWordSpacing
+wordSpacing
 5
 "
 ctx
 .
-textWordSpacing
+wordSpacing
 "
 "
 5
@@ -336,7 +336,7 @@ textLetterSpacing
 ;
 ctx
 .
-textWordSpacing
+wordSpacing
 =
 -
 1
@@ -363,13 +363,13 @@ _assertSame
 (
 ctx
 .
-textWordSpacing
+wordSpacing
 -
 1
 "
 ctx
 .
-textWordSpacing
+wordSpacing
 "
 "
 -
