--- a/testing/web-platform/tests/html/canvas/offscreen/text/2d.text.drawing.style.spacing.measure.html
+++ b/testing/web-platform/tests/html/canvas/offscreen/text/2d.text.drawing.style.spacing.measure.html
@@ -243,12 +243,12 @@ _assertSame
 (
 ctx
 .
-textWordSpacing
+wordSpacing
 0
 "
 ctx
 .
-textWordSpacing
+wordSpacing
 "
 "
 0
@@ -296,12 +296,12 @@ _assertSame
 (
 ctx
 .
-textWordSpacing
+wordSpacing
 0
 "
 ctx
 .
-textWordSpacing
+wordSpacing
 "
 "
 0
@@ -357,7 +357,7 @@ width_normal
 ;
 ctx
 .
-textWordSpacing
+wordSpacing
 =
 5
 ;
@@ -387,12 +387,12 @@ _assertSame
 (
 ctx
 .
-textWordSpacing
+wordSpacing
 5
 "
 ctx
 .
-textWordSpacing
+wordSpacing
 "
 "
 5
@@ -458,7 +458,7 @@ textLetterSpacing
 ;
 ctx
 .
-textWordSpacing
+wordSpacing
 =
 -
 1
@@ -485,13 +485,13 @@ _assertSame
 (
 ctx
 .
-textWordSpacing
+wordSpacing
 -
 1
 "
 ctx
 .
-textWordSpacing
+wordSpacing
 "
 "
 -
