Bug 1722788 [wpt PR 29822] - Rename Canvas2D.textLetterSpacing to Canvas2D.letterSpacing, a=testonly
Automatic update from web-platform-tests
Rename Canvas2D.textLetterSpacing to Canvas2D.letterSpacing

Per discussion in https://github.com/w3ctag/design-reviews/issues/627,
we have agreed to remove text prefix for attribute textLetterSpacing. So
that thee attribute name letterSpacing follows the same naming
conversion of other text attributes.

Bug: 1233706

Change-Id: I8b37f046f5cdbfb28848ba3930e047203b061982
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3056509
Commit-Queue: Yi Xu <yiyixchromium.org>
Reviewed-by: Bo <boliuchromium.org>
Reviewed-by: Aaron Krajeski <aaronhkchromium.org>
Cr-Commit-Position: refs/heads/master{#906594}

--

wpt-commits: 34cb7e900e12fb6b9dc71b6c78d0aa9915dd18d4
wpt-pr: 29822

UltraBlame original commit: 360dd21dbf7066d32b70028cb281b01960620a4a

--- a/testing/web-platform/tests/html/canvas/element/drawing-text-to-the-canvas/2d.text.drawing.style.nonfinite.spacing.html
+++ b/testing/web-platform/tests/html/canvas/element/drawing-text-to-the-canvas/2d.text.drawing.style.nonfinite.spacing.html
@@ -284,12 +284,12 @@ _assertSame
 (
 ctx
 .
-textLetterSpacing
+letterSpacing
 0
 "
 ctx
 .
-textLetterSpacing
+letterSpacing
 "
 "
 0
@@ -326,7 +326,7 @@ value
 ;
 ctx
 .
-textLetterSpacing
+letterSpacing
 =
 value
 ;
@@ -350,12 +350,12 @@ _assertSame
 (
 ctx
 .
-textLetterSpacing
+letterSpacing
 0
 "
 ctx
 .
-textLetterSpacing
+letterSpacing
 "
 "
 0
