--- a/testing/web-platform/tests/html/canvas/element/drawing-text-to-the-canvas/2d.text.drawing.style.spacing.html
+++ b/testing/web-platform/tests/html/canvas/element/drawing-text-to-the-canvas/2d.text.drawing.style.spacing.html
@@ -274,12 +274,12 @@ _assertSame
 (
 ctx
 .
-textLetterSpacing
+letterSpacing
 0
 "
 ctx
 .
-textLetterSpacing
+letterSpacing
 "
 "
 0
@@ -304,7 +304,7 @@ wordSpacing
 ;
 ctx
 .
-textLetterSpacing
+letterSpacing
 =
 3
 ;
@@ -312,12 +312,12 @@ _assertSame
 (
 ctx
 .
-textLetterSpacing
+letterSpacing
 3
 "
 ctx
 .
-textLetterSpacing
+letterSpacing
 "
 "
 3
@@ -350,12 +350,12 @@ _assertSame
 (
 ctx
 .
-textLetterSpacing
+letterSpacing
 3
 "
 ctx
 .
-textLetterSpacing
+letterSpacing
 "
 "
 3
@@ -380,7 +380,7 @@ wordSpacing
 ;
 ctx
 .
-textLetterSpacing
+letterSpacing
 =
 -
 1
@@ -396,13 +396,13 @@ _assertSame
 (
 ctx
 .
-textLetterSpacing
+letterSpacing
 -
 1
 "
 ctx
 .
-textLetterSpacing
+letterSpacing
 "
 "
 -
