--- a/testing/web-platform/tests/html/canvas/element/drawing-text-to-the-canvas/2d.text.drawing.style.spacing.measure.html
+++ b/testing/web-platform/tests/html/canvas/element/drawing-text-to-the-canvas/2d.text.drawing.style.spacing.measure.html
@@ -278,12 +278,12 @@ _assertSame
 (
 ctx
 .
-textLetterSpacing
+letterSpacing
 0
 "
 ctx
 .
-textLetterSpacing
+letterSpacing
 "
 "
 0
@@ -323,7 +323,7 @@ width
 ;
 ctx
 .
-textLetterSpacing
+letterSpacing
 =
 3
 ;
@@ -331,12 +331,12 @@ _assertSame
 (
 ctx
 .
-textLetterSpacing
+letterSpacing
 3
 "
 ctx
 .
-textLetterSpacing
+letterSpacing
 "
 "
 3
@@ -414,7 +414,7 @@ wordSpacing
 ;
 ctx
 .
-textLetterSpacing
+letterSpacing
 =
 0
 ;
@@ -422,12 +422,12 @@ _assertSame
 (
 ctx
 .
-textLetterSpacing
+letterSpacing
 0
 "
 ctx
 .
-textLetterSpacing
+letterSpacing
 "
 "
 0
@@ -502,7 +502,7 @@ width_normal
 ;
 ctx
 .
-textLetterSpacing
+letterSpacing
 =
 -
 2
@@ -518,13 +518,13 @@ _assertSame
 (
 ctx
 .
-textLetterSpacing
+letterSpacing
 -
 2
 "
 ctx
 .
-textLetterSpacing
+letterSpacing
 "
 "
 -
