--- a/testing/web-platform/tests/html/canvas/offscreen/text/2d.text.drawing.style.nonfinite.spacing.html
+++ b/testing/web-platform/tests/html/canvas/offscreen/text/2d.text.drawing.style.nonfinite.spacing.html
@@ -233,12 +233,12 @@ _assertSame
 (
 ctx
 .
-textLetterSpacing
+letterSpacing
 0
 "
 ctx
 .
-textLetterSpacing
+letterSpacing
 "
 "
 0
@@ -275,7 +275,7 @@ value
 ;
 ctx
 .
-textLetterSpacing
+letterSpacing
 =
 value
 ;
@@ -299,12 +299,12 @@ _assertSame
 (
 ctx
 .
-textLetterSpacing
+letterSpacing
 0
 "
 ctx
 .
-textLetterSpacing
+letterSpacing
 "
 "
 0
