--- a/testing/web-platform/tests/html/canvas/offscreen/text/2d.text.drawing.style.spacing.html
+++ b/testing/web-platform/tests/html/canvas/offscreen/text/2d.text.drawing.style.spacing.html
@@ -223,12 +223,12 @@ _assertSame
 (
 ctx
 .
-textLetterSpacing
+letterSpacing
 0
 "
 ctx
 .
-textLetterSpacing
+letterSpacing
 "
 "
 0
@@ -253,7 +253,7 @@ wordSpacing
 ;
 ctx
 .
-textLetterSpacing
+letterSpacing
 =
 3
 ;
@@ -261,12 +261,12 @@ _assertSame
 (
 ctx
 .
-textLetterSpacing
+letterSpacing
 3
 "
 ctx
 .
-textLetterSpacing
+letterSpacing
 "
 "
 3
@@ -299,12 +299,12 @@ _assertSame
 (
 ctx
 .
-textLetterSpacing
+letterSpacing
 3
 "
 ctx
 .
-textLetterSpacing
+letterSpacing
 "
 "
 3
@@ -329,7 +329,7 @@ wordSpacing
 ;
 ctx
 .
-textLetterSpacing
+letterSpacing
 =
 -
 1
@@ -345,13 +345,13 @@ _assertSame
 (
 ctx
 .
-textLetterSpacing
+letterSpacing
 -
 1
 "
 ctx
 .
-textLetterSpacing
+letterSpacing
 "
 "
 -
