--- a/testing/web-platform/tests/html/canvas/offscreen/text/2d.text.drawing.style.spacing.measure.html
+++ b/testing/web-platform/tests/html/canvas/offscreen/text/2d.text.drawing.style.spacing.measure.html
@@ -227,12 +227,12 @@ _assertSame
 (
 ctx
 .
-textLetterSpacing
+letterSpacing
 0
 "
 ctx
 .
-textLetterSpacing
+letterSpacing
 "
 "
 0
@@ -272,7 +272,7 @@ width
 ;
 ctx
 .
-textLetterSpacing
+letterSpacing
 =
 3
 ;
@@ -280,12 +280,12 @@ _assertSame
 (
 ctx
 .
-textLetterSpacing
+letterSpacing
 3
 "
 ctx
 .
-textLetterSpacing
+letterSpacing
 "
 "
 3
@@ -363,7 +363,7 @@ wordSpacing
 ;
 ctx
 .
-textLetterSpacing
+letterSpacing
 =
 0
 ;
@@ -371,12 +371,12 @@ _assertSame
 (
 ctx
 .
-textLetterSpacing
+letterSpacing
 0
 "
 ctx
 .
-textLetterSpacing
+letterSpacing
 "
 "
 0
@@ -451,7 +451,7 @@ width_normal
 ;
 ctx
 .
-textLetterSpacing
+letterSpacing
 =
 -
 2
@@ -467,13 +467,13 @@ _assertSame
 (
 ctx
 .
-textLetterSpacing
+letterSpacing
 -
 2
 "
 ctx
 .
-textLetterSpacing
+letterSpacing
 "
 "
 -
