Bug 1722894 [wpt PR 29836] - [CSP] Fix WPT eval-blocked-in-about-blank-iframe, a=testonly
Automatic update from web-platform-tests
[CSP] Fix WPT eval-blocked-in-about-blank-iframe

The test was failing for all vendors since it expected to get a
securitypolicyviolation event in the parent frame instead of the frame
where the eval was blocked.

I rewrote the test in a modern way and deleted the old http blink test
this one had been converted from.

Bug: 651742
Change-Id: Ie8b7ae4842c0934b3c18086a2aee93c8a8ca292a
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3059564
Commit-Queue: Antonio Sartori <antoniosartorichromium.org>
Reviewed-by: Arthur Sonzogni <arthursonzognichromium.org>
Cr-Commit-Position: refs/heads/master{#906671}

--

wpt-commits: d309992cc95cc8f340dd11065b51c4f1818a250c
wpt-pr: 29836

UltraBlame original commit: d318020d6e7348e09628a2a56c2ceb001e52f306

--- a/testing/web-platform/tests/content-security-policy/unsafe-eval/eval-blocked-in-about-blank-iframe.html
+++ b/testing/web-platform/tests/content-security-policy/unsafe-eval/eval-blocked-in-about-blank-iframe.html
@@ -10,24 +10,6 @@ html
 head
 >
 <
-!
--
--
-Programmatically
-converted
-from
-a
-WebKit
-Reftest
-please
-forgive
-resulting
-idiosyncracies
-.
--
--
->
-<
 meta
 http
 -
@@ -55,24 +37,7 @@ unsafe
 inline
 '
 ;
-connect
--
-src
-'
-self
-'
-;
 "
->
-<
-title
->
-eval
--
-blocked
-<
-/
-title
 >
 <
 script
@@ -109,70 +74,6 @@ js
 script
 >
 <
-script
-src
-=
-'
-.
-.
-/
-support
-/
-logTest
-.
-sub
-.
-js
-?
-logs
-=
-[
-"
-violated
--
-directive
-=
-script
--
-src
-"
-"
-PASS
-"
-]
-'
->
-<
-/
-script
->
-<
-script
-src
-=
-'
-.
-.
-/
-support
-/
-alertAssert
-.
-sub
-.
-js
-?
-alerts
-=
-[
-]
-'
->
-<
-/
-script
->
-<
 /
 head
 >
@@ -203,6 +104,172 @@ p
 <
 script
 >
+promise_test
+(
+async
+t
+=
+>
+{
+const
+document_loaded
+=
+new
+Promise
+(
+resolve
+=
+>
+window
+.
+onload
+=
+resolve
+)
+;
+await
+document_loaded
+;
+const
+eval_error
+=
+new
+Promise
+(
+resolve
+=
+>
+{
+window
+.
+addEventListener
+(
+'
+message
+'
+function
+(
+e
+)
+{
+assert_not_equals
+(
+e
+.
+data
+'
+FAIL
+'
+'
+eval
+was
+executed
+in
+the
+frame
+'
+)
+;
+if
+(
+e
+.
+data
+=
+=
+=
+'
+PASS
+'
+)
+resolve
+(
+)
+;
+}
+)
+;
+}
+)
+;
+const
+csp_violation_report
+=
+new
+Promise
+(
+resolve
+=
+>
+{
+window
+.
+addEventListener
+(
+'
+message
+'
+function
+(
+e
+)
+{
+if
+(
+e
+.
+data
+[
+"
+violated
+-
+directive
+"
+]
+)
+{
+assert_equals
+(
+e
+.
+data
+[
+"
+violated
+-
+directive
+"
+]
+"
+script
+-
+src
+"
+)
+;
+resolve
+(
+)
+;
+}
+}
+)
+;
+}
+)
+;
+frames
+[
+0
+]
+.
+document
+.
+write
+(
+<
+script
+>
 window
 .
 addEventListener
@@ -215,66 +282,31 @@ function
 e
 )
 {
-log
+parent
+.
+postMessage
 (
-"
+{
+'
 violated
 -
 directive
-=
-"
-+
+'
+:
 e
 .
 violatedDirective
+}
 )
 ;
 }
 )
 ;
-window
-.
-onmessage
-=
-function
-(
-e
-)
+try
 {
-log
-(
-e
-.
-data
-)
-;
-}
-window
-.
-onload
-=
-function
-(
-)
-{
-frames
-[
-0
-]
-.
-document
-.
-write
-(
-"
-<
-script
->
 eval
 (
 '
-window
-.
 parent
 .
 postMessage
@@ -294,8 +326,18 @@ FAIL
 '
 )
 ;
-window
-.
+}
+catch
+(
+e
+)
+{
+if
+(
+e
+instanceof
+EvalError
+)
 parent
 .
 postMessage
@@ -312,15 +354,13 @@ PASS
 "
 )
 ;
+}
 <
 /
 sc
-"
 +
-"
 ript
 >
-"
 )
 ;
 frames
@@ -334,7 +374,15 @@ close
 (
 )
 ;
+await
+eval_error
+;
+await
+csp_violation_report
+;
 }
+)
+;
 <
 /
 script
