Bug 1722897 [wpt PR 29837] - [CSP] Fix WPT still using 'unsafe-hashed-attributes', a=testonly
Automatic update from web-platform-tests
[CSP] Fix WPT still using 'unsafe-hashed-attributes'

The test was failing because it was still using
'unsafe-hashed-attributes', which has been removed and replaced by
'unsafe-hashes'.

Bug: 651742
Change-Id: Id1e05ed3b04216de3b28611d1150332cf7016c1b
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3059490
Commit-Queue: Antonio Sartori <antoniosartorichromium.org>
Commit-Queue: Arthur Sonzogni <arthursonzognichromium.org>
Auto-Submit: Antonio Sartori <antoniosartorichromium.org>
Reviewed-by: Arthur Sonzogni <arthursonzognichromium.org>
Cr-Commit-Position: refs/heads/master{#906692}

--

wpt-commits: 4c8d190f9895fdd108f6b03b49345c850e352b43
wpt-pr: 29837

UltraBlame original commit: 359fde8c7d8a7cd104dc5d15a900c85846cec72b

--- a/testing/web-platform/tests/content-security-policy/embedded-enforcement/subsumption_algorithm-source_list-wildcards.html
+++ b/testing/web-platform/tests/content-security-policy/embedded-enforcement/subsumption_algorithm-source_list-wildcards.html
@@ -1036,9 +1036,7 @@ with
 '
 unsafe
 -
-hashed
--
-attributes
+hashes
 '
 is
 not
@@ -1071,9 +1069,7 @@ src
 '
 unsafe
 -
-hashed
--
-attributes
+hashes
 '
 "
 "
