Bug 1722854 [wpt PR 29835] - Fix two css-ui outline tests, a=testonly
Automatic update from web-platform-tests
Fix two css-ui outline tests

- css/css-ui/outline-005: The test expected a rectangular outline
  outer edge, but both Chrome 94 and Firefox renders rounded outer
  edge.
  * Increase width of the outline and apply a rectangular clip
    to hide the difference of the outer edge. The test now checks
    whether the inner edge follows border-radius curve.
  * Add outline-offset:-1px to avoid visible anti-aliased pixels
    for both Chrome and Firefox.
  * Add fuzzy to allow slight color difference where the outline and
    the background intersect.

- css/css-ui/outline-006: The reference expect green color (0,128,0)
  while the test produced (0,127,0) on all browsers regardless of
  whether outline-color:invert is supported. Now let the test produce
  the standard green color.

Bug: 669473, 81556
Change-Id: Ic64a0d09eae99b7906287bc0c8bc086d00602d51
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3058350
Reviewed-by: Stephen Chenney <schenneychromium.org>
Commit-Queue: Xianzhu Wang <wangxianzhuchromium.org>
Cr-Commit-Position: refs/heads/master{#906752}

--

wpt-commits: 699a9d5054abc867bd376710c83a28eeff387177
wpt-pr: 29835

UltraBlame original commit: b6d30dfe376d5e177b25ce57eb35c825cfc188ed

--- a/testing/web-platform/tests/css/css-ui/outline-005.html
+++ b/testing/web-platform/tests/css/css-ui/outline-005.html
@@ -102,6 +102,41 @@ curve
 "
 >
 <
+!
+-
+-
+Allow
+slight
+color
+differences
+where
+the
+outline
+and
+the
+background
+intersect
+-
+-
+>
+<
+meta
+name
+=
+fuzzy
+content
+=
+"
+0
+-
+2
+;
+0
+-
+100
+"
+>
+<
 link
 rel
 =
@@ -174,16 +209,13 @@ height
 :
 100px
 ;
+overflow
+:
+hidden
+;
 background
 :
 red
-;
-border
--
-radius
-:
-100
-%
 ;
 display
 :
@@ -230,7 +262,14 @@ outline
 :
 solid
 green
-25px
+100px
+;
+outline
+-
+offset
+:
+-
+1px
 ;
 }
 <
