--- a/testing/web-platform/tests/css/css-ui/outline-006.html
+++ b/testing/web-platform/tests/css/css-ui/outline-006.html
@@ -190,7 +190,7 @@ background
 rgb
 (
 255
-128
+127
 255
 )
 ;
@@ -198,11 +198,14 @@ rgb
 *
 inverse
 of
+green
+(
 rgb
 (
 0
-127
+128
 0
+)
 )
 *
 /
@@ -213,21 +216,11 @@ div
 {
 color
 :
-rgb
-(
-0
-127
-0
-)
+green
 ;
 background
 :
-rgb
-(
-0
-127
-0
-)
+green
 ;
 margin
 :
