Bug 1722898 [wpt PR 29838] - Properly wire up scalabilityMode for setParameters., a=testonly
Automatic update from web-platform-tests
Properly wire up scalabilityMode for setParameters.

Keep setting the number of temporal layers until WebRTC handles
scalabilityMode for all codecs.

Bug: 986069
Change-Id: I40e0deec2f9842de50ea0fcf672c93a44c3c556c
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3060373
Reviewed-by: Harald Alvestrand <htachromium.org>
Reviewed-by: Danil Chapovalov <danilchapchromium.org>
Commit-Queue: Mirta Dvornicic <mirtadgoogle.com>
Cr-Commit-Position: refs/heads/master{#907108}

--

wpt-commits: 0a758bcce9d9daa8c005063a62d68b04da5daac1
wpt-pr: 29838

UltraBlame original commit: d00170b56ef58e7eb8235c5105e575d92bc0b334

--- a/testing/web-platform/tests/webrtc-svc/RTCRtpParameters-scalability.html
+++ b/testing/web-platform/tests/webrtc-svc/RTCRtpParameters-scalability.html
@@ -582,8 +582,53 @@ L1T3
 '
 )
 ;
+encoding
+.
+scalabilityMode
+=
+'
+L1T2
+'
+;
+await
+sender
+.
+setParameters
+(
+param
+)
+;
+const
+updatedParam
+=
+sender
+.
+getParameters
+(
+)
+;
+const
+updatedEncoding
+=
+getFirstEncoding
+(
+updatedParam
+)
+;
+assert_equals
+(
+updatedEncoding
+.
+scalabilityMode
+'
+L1T2
+'
+)
+;
 }
 Setting
+and
+updating
 scalabilityMode
 to
 a
