--- a/testing/web-platform/tests/css/css-ruby/block-ruby-004-ref.html
+++ b/testing/web-platform/tests/css/css-ruby/block-ruby-004-ref.html
@@ -56,20 +56,9 @@ utf
 <
 title
 >
+CSS
 Reference
-:
-RT
-append
-in
-'
-display
-:
-ruby
-/
-block
-ruby
-'
-.
+File
 <
 /
 title
@@ -104,30 +93,12 @@ style
 html
 body
 {
-color
-:
-black
-;
-background
--
-color
-:
-white
-;
 font
 :
 10px
 /
 1
 monospace
-;
-padding
-:
-0
-;
-margin
-:
-0
 ;
 }
 ruby
