Bug 1723014 [wpt PR 29843] - [css-ruby] Tweaked block-ruby-003 test and reference, a=testonly
Automatic update from web-platform-tests
Tweaked block-ruby-003 test and reference (#29843)

--

wpt-commits: 9650980b2c8e313a395be04c960346c8980bc83f
wpt-pr: 29843

UltraBlame original commit: ea699606c84eba75b3a11f0e25189a581fa1d738

--- a/testing/web-platform/tests/css/css-ruby/block-ruby-003-ref.html
+++ b/testing/web-platform/tests/css/css-ruby/block-ruby-003-ref.html
@@ -56,21 +56,9 @@ utf
 <
 title
 >
+CSS
 Reference
-:
-Text
-node
-insertion
-in
-'
-display
-:
-ruby
-/
-block
-ruby
-'
-.
+File
 <
 /
 title
@@ -105,30 +93,12 @@ style
 html
 body
 {
-color
-:
-black
-;
-background
--
-color
-:
-white
-;
 font
 :
 10px
 /
 1
 monospace
-;
-padding
-:
-0
-;
-margin
-:
-0
 ;
 }
 ruby
