Bug 1722923 [wpt PR 29839] - [css-ruby] Filename-renamed 2 ruby-base-container tests, a=testonly
Automatic update from web-platform-tests
[css-ruby] Filename-renamed 2 ruby-base-container tests (#29839)

* Filename-renamed 2 ruby-base-container tests

* Updated 2 tests and 1 reference issue 29515
--

wpt-commits: 7735055e603fd0c1e5bf6eaa9bca378206b45a00
wpt-pr: 29839

UltraBlame original commit: 72669646147c5b0bdc54b75c53e435501fc1e21a

--- a/testing/web-platform/tests/css/css-ruby/empty-ruby-base-container-ref.html
+++ b/testing/web-platform/tests/css/css-ruby/empty-ruby-base-container-ref.html
@@ -16,10 +16,9 @@ UTF
 <
 title
 >
-Empty
-ruby
-base
-container
+CSS
+Reference
+File
 <
 /
 title
@@ -76,6 +75,9 @@ ruby
 <
 rb
 >
+&
+nbsp
+;
 <
 /
 rb
