--- a/testing/web-platform/tests/html/semantics/scripting-1/the-script-element/execution-timing/146-href.html
+++ b/testing/web-platform/tests/html/semantics/scripting-1/the-script-element/execution-timing/146-href.html
@@ -144,8 +144,11 @@ script
 ;
 s
 .
-src
-=
+setAttribute
+(
+"
+href
+"
 "
 scripts
 /
@@ -155,6 +158,7 @@ include
 .
 js
 "
+)
 ;
 }
 )
@@ -169,26 +173,16 @@ function
 (
 )
 {
-/
-/
-SVG
-<
-script
->
-element
-uses
-href
-attribute
-so
-src
-attribute
-is
-ignored
-.
 assert_array_equals
 (
 eventOrder
 [
+"
+external
+script
+#
+1
+"
 ]
 )
 ;
