--- a/testing/web-platform/tests/css/css-fonts/parsing/font-family-valid.html
+++ b/testing/web-platform/tests/css/css-fonts/parsing/font-family-valid.html
@@ -263,6 +263,25 @@ font
 family
 '
 '
+System
+-
+UI
+'
+'
+system
+-
+ui
+'
+)
+;
+test_valid_value
+(
+'
+font
+-
+family
+'
+'
 serif
 sans
 -
@@ -270,6 +289,9 @@ serif
 cursive
 fantasy
 monospace
+system
+-
+ui
 '
 )
 ;
