--- a/testing/web-platform/tests/audio-output/selectAudioOutput-permissions-policy.https.sub.html
+++ b/testing/web-platform/tests/audio-output/selectAudioOutput-permissions-policy.https.sub.html
@@ -193,7 +193,10 @@ selectAudioOutput
 '
 )
 ;
-return
+const
+selected
+=
+await
 navigator
 .
 mediaDevices
@@ -202,6 +205,142 @@ selectAudioOutput
 (
 )
 ;
+let
+devices
+;
+try
+{
+devices
+=
+await
+navigator
+.
+mediaDevices
+.
+enumerateDevices
+(
+)
+;
+}
+catch
+(
+e
+)
+{
+/
+/
+Throw
+a
+unique
+error
+to
+avoid
+risk
+of
+false
+-
+pass
+if
+e
+should
+match
+/
+/
+an
+expected
+error
+from
+selectAudioOutput
+(
+)
+.
+throw
+Error
+(
+enumerateDevices
+(
+)
+failed
+with
+{
+e
+}
+)
+;
+}
+const
+selected_devices
+=
+devices
+.
+filter
+(
+info
+=
+>
+info
+.
+deviceId
+=
+=
+selected
+.
+deviceId
+)
+;
+/
+/
+Don
+'
+t
+use
+assert_not_equals
+(
+)
+because
+testharness
+.
+js
+cannot
+be
+/
+/
+loaded
+in
+the
+iframe
+with
+testdriver
+.
+js
+.
+if
+(
+selected_devices
+.
+length
+!
+=
+1
+)
+{
+throw
+Error
+(
+'
+Device
+count
+matching
+selected
+is
+'
++
+selected_devices
+.
+length
+)
+;
+}
 }
 if
 (
