Bug 1722978: Update tests within docshell/ to work with https-first enabled r=smaug
Differential Revision: https://phabricator.services.mozilla.com/D121233

UltraBlame original commit: afcdd8e3c67656f49be753e0cf04f18838639543

--- a/docshell/test/navigation/test_aboutblank_change_process.html
+++ b/docshell/test/navigation/test_aboutblank_change_process.html
@@ -72,13 +72,13 @@ and
 navigate
 it
 from
-http
+https
 :
 /
 /
 example
 .
-net
+com
 to
 about
 :
@@ -197,13 +197,13 @@ win
 location
 =
 "
-http
+https
 :
 /
 /
 example
 .
-net
+com
 /
 tests
 /
@@ -305,7 +305,7 @@ still
 has
 example
 .
-net
+com
 page
 loaded
 win
