--- a/intl/l10n/test/mochitest/localization/test_formatValue.html
+++ b/intl/l10n/test/mochitest/localization/test_formatValue.html
@@ -108,39 +108,50 @@ use
 strict
 "
 ;
-async
-function
-*
-generateBundles
-(
-resourceIds
-)
-{
 const
-bundle
+mockSource
 =
-new
-FluentBundle
+L10nFileSource
+.
+createMock
 (
+"
+test
+"
+[
 "
 en
 -
 US
 "
+]
+"
+/
+localization
+/
 {
-useIsolating
-:
-false
+locale
 }
-)
-;
-bundle
+/
+"
+[
+{
+path
+:
+"
+/
+localization
+/
+en
+-
+US
+/
+mock
 .
-addResource
-(
-new
-FluentResource
-(
+ftl
+"
+source
+:
 key1
 =
 Value
@@ -156,13 +167,36 @@ Value
 {
 count
 }
-)
-)
-;
-yield
-bundle
-;
 }
+]
+)
+;
+let
+registry
+=
+new
+L10nRegistry
+(
+{
+bundleOptions
+:
+{
+useIsolating
+:
+false
+}
+}
+)
+;
+registry
+.
+registerSources
+(
+[
+mockSource
+]
+)
+;
 (
 async
 (
@@ -190,9 +224,7 @@ ftl
 '
 ]
 false
-{
-generateBundles
-}
+registry
 )
 ;
 {
@@ -364,6 +396,8 @@ e
 is
 (
 e
+.
+message
 "
 [
 fluent
@@ -386,7 +420,6 @@ Unknown
 variable
 :
 count
-.
 "
 "
 Missing
